--- a/tika-server/pom.xml
+++ b/tika-server/pom.xml
@@ -40,7 +40,7 @@
   <parent>
     <groupId>org.apache.tika</groupId>
     <artifactId>tika-parent</artifactId>
-    <version>0.10-SNAPSHOT</version>
+    <version>1.0</version>
     <relativePath>../tika-parent/pom.xml</relativePath>
   </parent>
 
@@ -131,22 +131,6 @@
 
     <build>
         <plugins>
-           <!--  Maven Exec Plug-In: http://mojo.codehaus.org/exec-maven-plugin/  -->
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>1.1</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>java</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <mainClass>su.msk.jet.tikaserver.TikaServerCli</mainClass>
-                </configuration>
-            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -174,17 +158,29 @@
         </configuration>
       </plugin>
 
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.6</version>
-                <configuration>
-                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
-                    <argLine>-da -XX:+HeapDumpOnOutOfMemoryError -Xmx512m</argLine>
+      <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.6</version>
+          <configuration>
+              <redirectTestOutputToFile>true</redirectTestOutputToFile>
+              <argLine>-da -XX:+HeapDumpOnOutOfMemoryError -Xmx512m</argLine>
 <!--                    <argLine>-agentlib:jprofilerti=port=8849  -Xbootclasspath/a:/arc/opt/jprofiler5/bin/agent.jar</argLine> -->
-                </configuration>
-            </plugin>
-        </plugins>
+          </configuration>
+      </plugin>
+      <plugin>
+          <groupId>com.github.github</groupId>
+          <artifactId>downloads-maven-plugin</artifactId>
+          <version>0.4</version>
+          <configuration>
+              <description>Custom build of Apache ${project.artifactId}</description>
+              <repositoryName>tika</repositoryName>
+              <repositoryOwner>rosner</repositoryOwner>
+              <override>true</override>
+          </configuration>
+      </plugin>
+  </plugins>
+
     </build>
 
      <repositories>
@@ -193,12 +189,6 @@
             <name>Java.net Repository for Maven</name>
             <url>http://download.java.net/maven/2/</url>
             <layout>default</layout>
-        </repository>
-        <repository>
-            <id>maven-repository.dev.java.net</id>
-            <name>Java.net Maven 1 Repository (legacy)</name>
-            <url>http://download.java.net/maven/1</url>
-            <layout>legacy</layout>
         </repository>
     </repositories>
 </project>
